<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/welcome_message" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/homeValue"
        android:layout_marginTop="49dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:longClickable="false" android:hint="@string/home_value" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/downPayment"
        android:clickable="true"
        android:longClickable="false"
        android:hint="@string/down_payment"
        android:layout_below="@+id/homeValue"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/interestRate"
        android:clickable="true"
        android:longClickable="false"
        android:hint="@string/interest_rate"
        android:layout_below="@+id/downPayment"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/terms"
        android:hint="@string/terms"
        android:entries="@array/terms_list"
        android:layout_below="@+id/interestRate"
        android:layout_marginTop="15dp"
        android:layout_alignRight="@+id/interestRate"
        android:layout_alignEnd="@+id/interestRate"
        android:layout_alignLeft="@+id/interestRate"
        android:layout_alignStart="@+id/interestRate" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/propTaxRate"
        android:clickable="true"
        android:longClickable="false"
        android:hint="@string/property_tax_rate"
        android:layout_below="@+id/terms"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_text"
        android:id="@+id/btnCalculate"
        android:layout_below="@+id/propTaxRate"
        android:layout_marginTop="30dp"
        android:layout_alignRight="@+id/propTaxRate"
        android:layout_alignEnd="@+id/propTaxRate"
        android:layout_alignLeft="@+id/propTaxRate"
        android:layout_alignStart="@+id/propTaxRate"
        android:onClick="calculateMortgage" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:id="@+id/paymentHeader"
        android:layout_below="@+id/btnCalculate"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/totalTaxPaid"
        android:layout_below="@+id/paymentHeader"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/totalInterestPaid"
        android:layout_below="@+id/totalTaxPaid"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/monthlyPayment"
        android:layout_below="@+id/totalInterestPaid"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/payOffDate"
        android:layout_below="@+id/monthlyPayment"/>

</RelativeLayout>